sbin_PROGRAMS = ogAdmServer

AM_CFLAGS  =  ${LIBDBI_CFLAGS} ${LIBJANSSON_CFLAGS} ${LIBEVENT_CFLAGS} -g -Wall

ogAdmServer_SOURCES= sources/ogAdmServer.c	\
		     sources/dbi.c		\
		     sources/schedule.c		\
		     sources/utils.c		\
		     sources/rest.c		\
		     sources/client.c		\
		     sources/json.c		\
		     sources/ogAdmLib.c
