sbin_PROGRAMS = ogserver

AM_CFLAGS  =  ${LIBDBI_CFLAGS} ${LIBJANSSON_CFLAGS} ${LIBEVENT_CFLAGS} -g -Wall

ogserver_SOURCES= sources/ogAdmServer.c	\
		  sources/core.c	\
		  sources/dbi.c		\
		  sources/main.c	\
		  sources/schedule.c	\
		  sources/utils.c	\
		  sources/rest.c	\
		  sources/client.c	\
		  sources/json.c	\
		  sources/ogAdmLib.c
